2010-03-02  Noel O'Boyle

	* test/testsym.py: Added test for PR#2101034

	* test/CMakeLists.txt: Set required environment variables for
	"make test". Only works with CMake 2.8 though.
	* test/testbabel.py: Previous buffer fix didn't improve matters. Trying
	a second time.

	* src/formats/inchiformat.cpp: Add support for setting wedge/hash
	bonds for 2D data

	* src/perception.cpp: Unified code for the wedge and
	dash cases where there are two in-plane bonds.
	* src/formats/mdlformat.cpp: Improve support for writing of 2D.

2010-03-01  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/pdbformat.cpp: Fix for PR#2866659 from Fabian. Check
	for chain numbers when assigning sequence numbers.

	* src/data.cpp: Fix for PR#2889763 from Fabian -- make
	sure to check chain numbers as well -- or bond between chains!

	* src/typer.cpp: Fix for PR#2889708 -- another patch from Fabian
	to improve performance of SelectRootAtoms.

	* CMakeLists.txt: Don't use -fvisibility=hidden for
	Mac/gcc-4.2. This feature appears buggy.

2010-03-01  Tim Vandermeersch

        * src/stereo/perception.cpp: Add some more safety logic. (Fixes #2897750)

2010-03-01  Noel O'Boyle

	* src/perception.cpp: Fixed error for perception of stereo from 2D for
	3 in-plane bond + one wedge/dash. Also unified code for the wedge and
	dash cases.
	* src/formats/mdlformat.cpp: Add support for writing of 2D
	stereochemistry. The wedges/dashes read from input (or otherwise
	calculated) will be used unless the 'w' option is given, in which case
	the tetstereo objects will be used to work out the wedges/dashes. This
	is required because the wedges/dashes often contain information beyond
	the stereochemistry and it would be unwise to just forget it.

2010-02-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/gaussformat.cpp: Fix crash with reading Gaussian
	files with only one geometry.

	* src/formats/CMakeLists.txt: Fix to allow compile of InChI with
	ops/unique.cpp correctly.
